--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 </head>
 
 <body>
-    <h1><span id="skip">Skip</span> The Diet,<br>Just Eat Healthy With Foody Moody</h1>
+    <section class="background">
+        <div class="half-width">
+            <h1><span class="skip">Skip</span> The Diet,<br>Just Eat Healthy With <span class="skip"> <br> Foody
+                    Moody</span></h1>
+            <p>imagine you don't need a diet because we provide healthy and delicious food for yoy. No time to waste,
+                Take your first online order within minutes</p>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">ORDER FOOD</a>
+            </div>
+            <div class="half-width">
+                <img src="images/female/Group 8425.png" alt="">
+            </div>
+        
+    </section>
 </body>
 
 </html>
