--- a/index.html
+++ b/index.html
@@ -18,13 +18,23 @@
             <h1><span class="skip">Skip</span> The Diet,<br>Just Eat Healthy With <span class="skip"> <br> Foody
                     Moody</span></h1>
             <p>imagine you don't need a diet because we provide healthy and delicious food for yoy. No time to waste,
-                Take your first online order within minutes</p>
+                Take your first online order within minutes.</p>
                 <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">ORDER FOOD</a>
             </div>
             <div class="half-width">
                 <img src="images/female/Group 8425.png" alt="">
             </div>
         
+    </section>
+    <section class="second-background"> 
+        <div class="half-width">
+            <img src="images/female/2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Me</h1>
+            <p>Hi! i am Linda. <br> We live in a world where our food is making us sick, tired, and overweight. thats why Eat Healthy Food With Foody Moody.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">CONTACT ME</a>
+        </div>
     </section>
 </body>
 
